<resources>
    <string name="app_name">News4You</string>
    <string name="submit">Submit</string>
    <string name="feed">Feed</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="explore">Explore</string>
    <string name="retakeQuestionnaire">Retake Questionnaire</string>
    <string name="very_interested">Very Interested</string>
    <string name="interested">Interested</string>
    <string name="no_preference">No Preference</string>
    <string name="uninterested">Uninterested</string>
    <string name="very_uninterested">Very Uninterested</string>
    <string name="skip">Skip</string>
    <string name="proceed">Proceed</string>
    <string name="questionnaireIntroTitle">Welcome to News4You!</string>
    <string name="settingsMessage">%s\'s Settings</string>
    <string name="questionnaireIntroSummary">You are now encouraged to fill out a brief questionnaire so we can get an idea of your news preferences. If you would like to skip it we can generate a default feed for you.</string>
    <string name="signUpIntro">Sign up to continue</string>
    <string name="passwordHint">Type Your Password</string>
    <string name="retypePasswordHint">Retype Your Password</string>
    <string name="emailHint">Type Your Email</string>
    <string name="signUp">Sign Up</string>
    <string name="alreadySignedUp">I already have an account</string>
    <string name="welcomeBack">Welcome back!</string>
    <string name="signInIntro">Sign in to continue</string>
    <string name="signIn">Sign In</string>
    <string name="notSignedUp">I don\'t have an account</string>
    <string name ="signOut">Sign Out</string>
    <string name ='like'>Like</string>
    <string name ='dislike'>Dislike</string>
    <string name ='share'>Share</string>
</resources>