<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.QuestionnaireFragment">

    <data>
        <variable
            name="questionnaireViewModel"
            type="com.example.capstoneproject.viewmodels.QuestionnaireViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/topicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@{questionnaireViewModel.topic}"
            android:textSize="40sp" />

        <Button
            android:id="@+id/veryInterestedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/very_interested"
            android:layout_marginTop="70dp"
            android:onClick="@{() -> questionnaireViewModel.veryInterestedButtonClicked()}"/>

        <Button
            android:id="@+id/interestedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/interested"
            android:layout_marginTop="20dp"
            android:onClick="@{() -> questionnaireViewModel.interestedButtonClicked()}"/>

        <Button
            android:id="@+id/noPreferenceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/no_preference"
            android:layout_marginTop="20dp"
            android:onClick="@{() -> questionnaireViewModel.noPreferenceButtonClicked()}"/>

        <Button
            android:id="@+id/uninterestedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/uninterested"
            android:layout_marginTop="20dp"
            android:onClick="@{() -> questionnaireViewModel.uninterestedButtonClicked()}"/>

        <Button
            android:id="@+id/veryDisinterestedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/very_uninterested"
            android:layout_marginTop="20dp"
            android:onClick="@{() -> questionnaireViewModel.veryUninterestedButtonClicked()}"/>

        <Button
            android:id="@+id/skipButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/skip"
            android:layout_marginTop="110dp"
            android:layout_marginStart="120dp"
            android:onClick="@{() -> questionnaireViewModel.skipButtonClicked()}"/>

    </LinearLayout>
</layout>